Last section Footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1006 +1,16 @@
 @import "utils";
+@import "../styles/reset";
+
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/place.scss";
+@import "./blocks/page.scss";
+
+@import "./blocks/header.scss";
 @import "./blocks/menu.scss";
-// @import "fonts";
-// @import "typography";
-$icon-width: 18px;
-
-// html {
-//   background-color: #e5e5e5;
-// }
-
-body,
-h1,
-h2,
-h3,
-p {
-  // background: $c-gray;
-  margin: 0;
-}
-
-.container {
-  margin: 0 auto;
-
-  max-width: 280px;
-  padding: 0 20px;
-  
-  @include onTablet {
-    max-width: 700px;
-    padding: 0 34px;
-  }
-
-  @include onDesktop {
-    max-width: 1170px;
-    padding: 0 55px;
-  }
-}
-
-.header__actions {
-  display: grid;
-  grid-template-columns: $icon-width 1fr;
-  justify-items: center;
-  align-items: center;
-
-  margin-bottom: 250px;
-
-  @include onTablet {
-    margin-bottom: 40px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 120px;
-  }
-}
-
-.header {
-  &__content {
-    position: relative;
-    max-width: 1280px;
-
-    margin: 0 auto;
-    
-    padding: 9px 0 0;
-
-    @include onTablet {
-      padding: 15px 0 0;
-    }
-
-    @include onDesktop {
-      padding: 15px 0 0;
-    }
-  
-  }
-  
-  &__title {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 45px;
-    line-height: 100%;
-    text-align: center;
-    color: #000;
-
-    margin-bottom: 20px;
-
-    @include onTablet {
-      margin-bottom: 38px;
-
-      font-size: 54px;
-      line-height: 120%;
-      text-align: left;
-    }
-  
-    @include onDesktop {
-      margin-bottom: 90px;
-
-      font-size: 72px;
-      line-height: 120%;
-      text-align: left;
-    }
-  }
-
-  &__image {
-    position: absolute;
-    right: 0;
-    top: 0;
-
-    // width: calc(100vw / 2);
-    // object-fit: cover;
-    // height: 100vh;
-
-    width: 320px;
-    height: 300px;
-
-    z-index: -1;
-
-    @include onTablet {
-      width: 374px;
-      height: 384px;
-    }
-  
-    @include onDesktop {
-      width: 725px;
-      height: 655px;
-    }
-  }
-
-  &__logo {
-    width: 55px;
-    height: 60px;
-
-    @include onTablet {
-      width: 62px;
-      height: 72px;
-    }
-  
-    @include onDesktop {
-      width: 62px;
-      height: 72px;
-    }
-  }
-
-  &__icon {
-    width: 18px;
-    height: 12px;
-    
-    transition: background-image 0.3s;
-
-    &--menu {
-      background-image: url(../images/Menu.png);
-    }
-
-    &--cross {
-      width: 21px;
-      height: 21px;
-
-      background-image: url(../images/Cross.svg);
-      
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-
-      &:hover {
-        transform: scale(1.05);
-      }
-    }
-  }
-
-  &__events {
-    margin-right: 150px;
-    position: absolute;
-    left: 45px;
-    top: 535px;
-
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 100%;
-    color: #687480;
-
-    transform: rotate(-90deg);
-    display: none;
-
-    &::before {
-      content: "";
-      position: absolute;
-      width: 1px;
-      height: 70px;
-      left: -56px;
-      top: -28px;
-
-      background: #1a5a4c;
-      transform: rotate(-90deg);
-      overflow: hidden;
-    }
-  
-    @include onDesktop {
-      overflow: visible;
-      display: block;
-    }
-  }
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-bottom: 70px;
-
-  transition: background-color 0.3s,
-    box-shadow 0.3s,
-    border-color 0.3s;
-
-  @include onTablet {
-    justify-content: flex-start;
-    margin-bottom: 107px;
-  }
-
-  @include onDesktop {
-    margin-left: 200px;
-    margin-bottom: 318px;
-  }
-
-  &--subscribe {
-    margin-bottom: 0;
-
-    @include onTablet {
-      margin-bottom: 0;
-    }
-  
-    @include onDesktop {
-      margin-left: 0;
-      margin-bottom: 0;
-    }
-
-  }
-
-  &__text {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: #0f0e08;
-
-    border: 1px solid;
-    border-color: #1a5a4c;
-
-    padding: 16px 80px;
-
-    @include onTablet {
-      padding: 26px 67px;
-    }
-  
-    @include onDesktop {
-      padding: 26px 67px;
-    }
-
-    &:hover {
-      border-color: #d7dde3;
-      background-color: #fff;
-      box-shadow: 0 13px 27px rgba(210, 219, 230, 0.46);
-    }
-  
-    &:active {
-      border-color: #1a5a4c;
-      background-color: #1a5a4c;
-      box-shadow: 0 8px 14px rgba(232, 234, 236, 0.48);
-    }
-  }
-
-  &__button {
-    width: 50px;
-    height: 50px;
-    text-decoration: none;
-
-    background-color: #1a5a4c;
-
-    @include onTablet {
-      width: 70px;
-      height: 70px;
-    }
-  
-    @include onDesktop {
-      width: 70px;
-      height: 70px;
-    }
-
-    &--red {
-      border: transparent;
-      background-color: #f14a27;
-
-      padding: 0;
-    }
-
-    &:hover {
-      color: #13d1a8;
-      border-color: #1a5a4c;
-      background-color: #13d1a8;
-      box-shadow: 0 13px 27px rgba(210, 219, 230, 0.46);
-    }
-  
-    &:active {
-      border-color: #1a5a4c;
-      background-color: #1a5a4c;
-      box-shadow: 0 8px 14px rgba(232, 234, 236, 0.48);
-    }
-  }
-
-  &__arrow-right {
-    width: 8px;
-    height: 12px;
-    color: #d7dde3;
-    padding: 19px 21px;
-    
-    @include onTablet {
-      padding: 29px 31px;
-    }
-  
-    @include onDesktop {
-      padding: 29px 31px;
-    }
-  }
-
-  &__email {
-    box-sizing: border-box;
-    width: 230px;
-    height: 50px;
-
-    padding-left: 24px;
-
-    background-color: #fff;
-
-    border: transparent;
-
-    margin-right: 0;
-
-    @include onTablet {
-      width: 374px;
-      height: 70px;
-
-      margin-right: 16px;
-    }
-  
-    @include onDesktop {
-      width: 470px;
-      height: 70px;
-      padding-left: 32px;
-      margin-right: 30px;
-    }
-
-    &::placeholder {
-      font-family: Montserrat, sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 100%;
-      color: #687480;
-    }
-
-    &:hover {
-      border-color: #fff;
-      background-color: #fff;
-      box-shadow: 0 13px 27px rgba(210, 219, 230, 0.46);
-    }
-  
-    &:active {
-      border-color: #d7dde3;
-      background-color: #d7dde3;
-      box-shadow: 0 8px 14px rgba(232, 234, 236, 0.48);
-    }
-  }
-}
-
-.page__section {
-  margin-bottom: 100px;
-
-  @include onTablet {
-    margin-bottom: 90px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 200px;
-  }
-
-  &--desktop {
-    margin-bottom: 188px;
-
-    @include onTablet {
-      margin-bottom: 174px;
-    }
-
-    @include onDesktop {
-      margin-bottom: 363px;
-    }
-  }
-
-  &-title {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 100%;
-
-    text-align: center;
-
-    color: #0f0e08;
-
-    margin-bottom: 40px;
-
-    @include onTablet {
-      font-size: 48px;
-      line-height: 100%;
-      text-align: left;
-
-      margin-bottom: 48px;
-    }
-
-    @include onDesktop {
-      font-size: 48px;
-      line-height: 100%;
-      text-align: left;
-
-      margin-bottom: 56px;
-    }
-  }
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
-
-  @include onTablet {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 20px;
-  }
-
-  @include onDesktop {
-    grid-template-columns: repeat(12, 1fr);
-    column-gap: 30px;
-    margin-bottom: 30px;
-  }
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  &--desktop {
-    display: block;
-
-    @include onTablet {
-      display: block;
-    }
-
-    @include onDesktop {
-      display: grid;
-    }
-  }
-
-  &__item {
-    @for $start from 1 through 12 {
-      @for $end from $start through 12 {
-        &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
-        }
-
-        &--desktop-#{$start}-#{$end} {
-          @include onDesktop {
-            grid-column: #{$start} / #{$end + 1};
-          }
-        }
-      }
-    }
-  }
-}
-
-.place {
-  max-width: 1170px;
-  &__art {
-    width: 280px;
-    height: 210px;
-    
-    margin-bottom: 16px;
-
-    @include onTablet {
-      width: 700px;
-      height: 520px;
-
-      margin-bottom: 40px;
-    }
-  
-    @include onDesktop {
-      width: 670px;
-      height: 520px;
-
-      margin-bottom: 104px;
-    }
-  }
-
-  &__container {
-    margin: auto 0;
-
-    @include onTablet {
-      max-width: 460px;
-    }
-
-  }
-
-  &__description {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    margin-bottom: 10px;
-
-    @include onTablet {
-      justify-content: flex-start;
-    }
-  
-    @include onDesktop {
-      justify-content: flex-start;
-    }
-  }
-
-  &__name {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-
-    color: #687480;
-
-    @include onTablet {
-      font-size: 14px;
-      padding-right: 30px;
-    }
-  
-    @include onDesktop {
-      justify-content: flex-start;
-      font-size: 14px;
-    }
-  }
-
-  &__date {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 150%;
-
-    color: #1a5a4c;
-
-    @include onTablet {
-      font-size: 14px;
-    }
-
-    @include onDesktop {
-      font-size: 14px;
-    }
-  }
-
-  &__title {
-    position: relative;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 100%;
-
-    color: #0f0e08;
-
-    margin-bottom: 10px;
-
-    @include onTablet {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-
-    @include onDesktop {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 12px;
-      left: 265px;
-      width: 10px;
-      height: 10px;
-      background-color: #f14a27;
-
-      @include onTablet {
-        left: 346px;
-        width: 15px;
-        height: 15px;
-      }
-
-      @include onDesktop {
-        left: 346px;
-        width: 15px;
-        height: 15px;
-      }
-    }
-
-    &--2::after {
-      left: 230px;
-
-      @include onTablet {
-        left: 300px;
-      }
-
-      @include onDesktop {
-        left: 300px;
-      }
-    }
-  }
-
-  &__text {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 150%;
-
-    color: #4e4e4e;
-
-    margin-bottom: 60px;
-
-    @include onTablet {
-      margin-bottom: 64px;
-    }
-
-    @include onDesktop {
-      margin-bottom: 104px;
-    }
-  }
-}
-
-.gallery {
-
-  &__art {
-    width: 280px;
-    height: 410px;
-
-    @include onTablet {
-      width: 340px;
-      height: 543px;
-    }
-  
-    @include onDesktop {
-      width: 370px;
-      height: 600px;
-    }
-
-    &-2-Des {
-      display: none;
-
-      @include onTablet {
-        display: none;
-      }
-    
-      @include onDesktop {
-        display: grid;
-
-        width: 770px;
-        height: 600px;
-      }
-    }
-  }
-
-  &__only-tablet {
-    display: none;
-
-    @include onTablet {
-      display: grid;
-
-      width: 340px;
-      height: 543px;
-    }
-  
-    @include onDesktop {
-      display: none;
-    }
-  }
-
-  &__only-desctop {
-    display: none;
-
-    @include onTablet {
-      display: none;
-    }
-  
-    @include onDesktop {
-      display: grid;
-    }
-  }
-
-  &__place {
-    margin-bottom: 20px;
-
-    @include onTablet {
-      margin-bottom: 32px;
-    }
-
-    @include onDesktop {
-      // margin-bottom: 0;
-    }
-  }
-}
-
-.lecture {
-
-  margin-bottom: 210px;
-
-  @include onTablet {
-    margin-bottom: 360px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 448px;
-  }
-
-  &__place {
-    width: 280px;
-    height: 140px;
-
-    text-align: center;
-    margin: 0 auto;
-
-    background: #fff;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-
-    @include onTablet {
-      width: 570px;
-      height: 204px;
-
-      text-align: left;
-    }
-    
-    @include onDesktop {
-      width: 570px;
-      height: 204px;
-
-      text-align: left;
-    }
-  }
-
-  &__bc-image {
-    position: absolute;
-    left: 0;
-    right: 0;
-      
-    width: 320px;
-    height: 210px;
-
-    @include onTablet {
-      width: 700px;
-      height: 390px;
-
-      left: 34px;
-      right: 34px;
-    }
-    
-    @include onDesktop {
-      width: 100%;
-      height: 550px;
-  
-      left: 0;
-      right: 0;
-    }
-  
-    &-container {
-      position: relative;
-      max-width: 320px;
-
-      margin: 0 auto;
-      z-index: -1;
-
-      @include onTablet {
-        max-width: 768px;
-      }
-
-      @include onDesktop {
-        max-width: 1280px;
-      }
-    }
-  }
-
-  &__text-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    text-align: center;
-
-    margin-bottom: 20px;
-    padding-top: 20px;
-
-    @include onTablet {
-      justify-content: flex-start;
-      margin-left: 55px;
-      padding-top: 45px;
-    }
-  
-    @include onDesktop {
-      justify-content: flex-start;
-      margin-left: 100px;
-      padding-top: 45px;
-    }
-  }
-
-  &__name {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-
-    color: #687480;
-
-    padding-right: 24px;
-
-    @include onTablet {
-      font-size: 14px;
-      padding-right: 140px;
-    }
-  
-    @include onDesktop {
-      justify-content: flex-start;
-      font-size: 14px;
-      padding-right: 130px;
-    }
-  }
-
-  &__date {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 150%;
-
-    color: #1a5a4c;
-
-    @include onTablet {
-      font-size: 14px;
-    }
-
-    @include onDesktop {
-      font-size: 14px;
-    }
-  }
-
-  &__title {
-    position: relative;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 100%;
-
-    color: #0f0e08;
-
-    @include onTablet {
-      font-size: 36px;
-      // margin-bottom: 15px;
-      margin-left: 55px;
-    }
-
-    @include onDesktop {
-      font-size: 36px;
-      // margin-bottom: 15px;
-      margin-left: 100px;
-    }
-  }
-}
-
-.scroll {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // margin-bottom: 24px;
-  
-  cursor: pointer;
-
-  @include onDesktop {
-    display: none;
-  }
-
-  &__ellipse {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__point {
-    background-image: url(../images/Ellipse_3.1.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 9px;
-    width: 9px;
-  
-    &:not(:last-child) {
-      margin-right: 22px;
-    }
-
-    &--1 > :nth-child(1) {
-      background-image: url(../images/Ellipse_3.svg);
-    }
-  }
-}
-
-.subscribe {
-  
-
-  &__container {
-    position: relative;
-    max-width: 320px;
-
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-
-    text-align: center;
-
-    margin: 0 auto;
-
-    @include onTablet {
-      max-width: 768px;
-    }
-
-    @include onDesktop {
-      max-width: 1280px;
-    }
-  }
-  
-  &__image {
-    position: absolute;
-    left: 0;
-    right: 0;
-
-    margin: 0 auto;
-
-    z-index: -1;
-
-    width: 320px;
-    height: 386px;
-
-    background-image: url(../images/Subscribe-phone.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @include onTablet {
-      width: 768px;
-      height: 380px;
-
-      background-image: url(../images/Subscribe_tab.png);
-
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-
-    @include onDesktop {
-      width: 1280px;
-      height: 550px;
-
-      background-image: url(../images/Subscribe_Des.png);
-
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-  }
-
-  &__title {
-    display: block;
-    text-align: center;
-    color: #fff;
-    margin-bottom: 20px;
-  }
-
-  &__text {
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 150%;
-    text-align: center;
-
-    color: #fff;
-
-    margin-bottom: 50px;
-
-    @include onTablet {
-      margin-bottom: 64px;
-    }
-
-    @include onDesktop {
-      margin-bottom: 72px;
-    }
-  }
-}
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/scroll.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/button.scss";
+@import "./blocks/footer.scss";
