--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$font-text: "Montserrat", sans-serif;
+$font-title: "IBM Plex Sans", sans-serif;
+
+$colore-white: #fff;
+$colore-black: #0f0e08;
+$colore-gray: #687480;
+$colore-green: #1a5a4c;
+
+$shadow-box: 0 13px 27px rgba(210, 219, 230, 0.46);
+$shadow-box-2: 0 8px 14px rgba(232, 234, 236, 0.48);
+$transition-time: 0.3s;
