--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,7 @@
 $icon-width: 18px;
 
 .menu {
-  background-color: #687480;
+  background-color: $colore-gray;
 
   height: 100vh;
   padding: 18px 0;
@@ -16,7 +16,6 @@ $icon-width: 18px;
     align-items: center;
 
     margin-bottom: 75px;
-    // max-width: 320px;
 
     @include onTablet {
       margin-bottom: 90px;
@@ -45,19 +44,19 @@ $icon-width: 18px;
     padding-bottom: 8px;
     border-bottom: 1px solid transparent;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: $font-title;
     font-weight: bold;
     font-size: 24px;
     line-height: 100%;
 
-    color: #fff;
+    color: $colore-white;
     text-decoration: none;
     text-transform: uppercase;
 
-    transition: border-color 0.3s;
+    transition: border-color $transition-time;
 
     &:hover {
-      border-color: #fff;
+      border-color: $colore-white;
     }
   }
 
@@ -65,14 +64,13 @@ $icon-width: 18px;
     display: block;
     width: max-content;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: $font-title;
     font-weight: bold;
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 1.5px;
 
-    color: #fff;
-    // text-transform: uppercase;
+    color: $colore-white;
     text-decoration: none;
 
     &--phone {
@@ -81,29 +79,7 @@ $icon-width: 18px;
 
     &--action {
       padding-bottom: 8px;
-      border-bottom: 1px solid #fff;
-    }
-  }
-}
-
-.page {
-  scroll-behavior: smooth;
-
-  &__body--with-menu {
-    overflow: hidden;
-  }
-
-  &__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    transform: translateX(-100%);
-    transition: transform 0.3s;
-
-    &:target {
-      transform: translateX(0);
+      border-bottom: 1px solid $colore-white;
     }
   }
 }
