--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "../styles/blocks/mixins.scss";
+@import "../styles/blocks/page.scss";
+@import "../styles/blocks/container.scss";
+@import "../styles/blocks/logo.scss";
+@import "../styles/blocks/top-actions.scss";
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/grid.scss";
+@import "../styles/blocks/icon.scss";
+@import "../styles/blocks/footer.scss";
+@import "../styles/blocks/event-title.scss";
+@import "../styles/blocks/lection.scss";
+@import "../styles/blocks/follow.scss";
 
-body {
-  background: $c-gray;
+.font {
+  font-weight: 600;
 }
