Footer with link in Contacts

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -134,7 +134,18 @@
   }
 
   &__text {
+    font-family: $font-title;
+    font-size: 14px;
+    line-height: 150%;
+    color: $colore-black;
     margin-bottom: 20px;
+    text-decoration: none;
+
+    transition: box-shadow $transition-time;
+
+    &:hover {
+      box-shadow: 0 13px 37px rgba(22, 21, 21, 0.2);
+    }
   }
 
   &__text-2 {
