--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,6 @@
 .header {
   box-sizing: border-box;
   padding: 9px 20px;
-  // height: 300px;
   
   background-repeat: no-repeat;
   background-size: contain;
@@ -71,6 +70,7 @@
     background-color: transparent;
     color: #0f0e08;
     text-align: center;
+    text-transform: uppercase;
   }
   
   &__link {
