--- a/src/styles/blocks/event-title.scss
+++ b/src/styles/blocks/event-title.scss
@@ -18,7 +18,7 @@
     width: 10px;
     height: 10px;
     top: 10px;
-    left: 300px;
+    right: 10px;
     background: #f14a27;
   
     @include tablet {
