--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -74,70 +74,18 @@
       font-size: 14px;
     }
   }
-}
 
-.gallery {
-  &__image {
-    transition: transform 0.3s ease-in-out;
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
-    &:hover {
-      transform: scale(1.08);
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateX(0);
     }
-  }
-
-  &__image-container {
-    overflow: hidden;
-
-    @include desktop {
-      overflow: scroll;
-    }
-  }
-
-  &__scroll {
-    display: flex;
-    column-gap: 16px;
-    height: 410px;
-    overflow: hidden;
-    margin-bottom: 20px;
-
-    @include tablet {
-      column-gap: 20px;
-      height: 543px;
-    }
-
-    @include desktop {
-      gap: 30px;
-      flex-wrap: wrap;
-      overflow: visible;
-    }
-  }
-}
-
-.circle {
-  padding: 0 109px;
-  display: flex;
-
-  &__circles--active {
-    margin-right: 20px;
-    width: 9px;
-    height: 9px;
-    background-image: url(../images/Ellipse3.png);
-  }
-
-  &__circles {
-    margin-right: 20px;
-    width: 9px;
-    height: 9px;
-    background-image: url(../images/Ellipse2.png);
-  }
-
-  @include tablet {
-    display: none;
-  }
-}
-
-.image__ipad {
-  @include desktop {
-    display: none;
   }
 }
