--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,4 +1,5 @@
 .container {
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 0 20px;
   
@@ -8,7 +9,7 @@
   }
   
   @include desktop {
-    padding: 0 55px;
+    padding: 0;
     max-width: 1170px;
   }
 }
