--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,52 +1,17 @@
 .footer {
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 150%;
-
-  &__nav {
+  &__icons {
     display: flex;
     justify-content: space-between;
-
-    @include tablet {
-      display: grid;
-      margin-bottom: 120px;
-    }
-
-    @include desktop {
-      margin-bottom: 310px;
-    }
-  }
-
-  &__nav-link {
-    line-height: 100%;
-    color: #0f0e08;
+    gap: 20px;
     cursor: pointer;
-    margin-bottom: 20px;
-    text-decoration: none;
-  }
-  
-  &__text {
-    text-align: center;
-    font-size: 12px;
-    line-height: 17px;
-    color: #0f0e08;
-    margin-bottom: 12px;
   }
 
-  &__copyright {
-    text-align: center;
-    font-size: 12px;
-    line-height: 17px;
-    color: #0f0e08;
-    margin-bottom: 35px;
-  }
-  
   &__social-net {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
-  
+
     @include tablet {
       align-items: flex-start;
       flex-direction: column;
@@ -54,22 +19,15 @@
       margin-bottom: 0;
     }
   }
-  
-  &__icons {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    cursor: pointer;
-  }
-  
+
   &__facebook {
-    background-image: url(../images/Facebook.png);
+    background-image: url(../images/Facebook.svg);
   }
-  
+
   &__insta {
-    background-image: url(../images/insta.png);
+    background-image: url(../images/insta.svg);
   }
-  
+
   &__graphik {
     margin-bottom: 70px;
 
@@ -80,13 +38,13 @@
     @include desktop {
       margin-bottom: 84px;
     }
-  
+
     &-title {
       margin-top: 0;
       margin-bottom: 20px;
     }
   }
-  
+
   &__contacts {
     margin-bottom: 147px;
   
@@ -109,7 +67,7 @@
       cursor: pointer;
     }
   }
-  
+
   &__menu {
     grid-column: 2/3;
     display: flex;
@@ -120,7 +78,7 @@
       display: none;
     }
   }
-  
+
   &__link {
     display: block;
     border-radius: 50%;
@@ -132,7 +90,7 @@
     background-position: 50%;
     margin-bottom: 20px;
   }
-  
+
   &__line {
     height: 1px;
     width: 100%;
@@ -151,12 +109,50 @@
     }
   }
 
-  // &__about {
-  //   display: flex;
-  //   justify-content: space-between;
+  &__nav {
+    margin-bottom: 20px;
 
-  //   @include tablet {
-  //     display: grid;
-  //   }
-  // }
+    @include tablet {
+      margin-bottom: 120px;
+    }
+    
+    &-link {
+      display: block;
+      font-size: 14px;
+      color: #0f0e08;
+      text-decoration: none;
+    }
+  }
+
+  &__text {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 140%;
+    color: #0f0e08;
+    text-align: center;
+    margin-bottom: 10px;
+
+    &-block {
+      order: 1;
+    }
+
+    @include tablet {
+      text-align: end;
+      margin-bottom: 36px;
+    }
+  }
+
+  &__copyright {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 140%;
+    color: #0f0e08;
+    text-align: center;
+    margin-bottom: 56px;
+
+    @include tablet {
+      text-align: start;
+      margin-bottom: 36px;
+    }
+  }
 }
