--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import "fonts";
 @import "typography";
 @import "../styles/blocks/mixins.scss";
+@import "../styles/blocks/variables.scss";
+
 @import "../styles/blocks/page.scss";
 @import "../styles/blocks/container.scss";
 @import "../styles/blocks/logo.scss";
@@ -13,7 +15,18 @@
 @import "../styles/blocks/event-title.scss";
 @import "../styles/blocks/lection.scss";
 @import "../styles/blocks/follow.scss";
+@import "../styles/blocks/actual.scss";
+@import "../styles/blocks/icons.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/grid-footer.scss";
 
 .font {
   font-weight: 600;
+}
+
+.image__ipad {
+  @include desktop {
+    display: none;
+  }
 }
