--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -8,20 +8,23 @@
     font-weight: bold;
     font-size: 30px;
     line-height: 100%;
-    color: #0f0e08;
     height: 61px;
     width: max-content;
     grid-row: 1 / 1;
     grid-column: 2 / 3;
-
+    
     @include onTablet {
       font-size: 36px;
       height: 72px;
       grid-column: 4 / 6;
     }
-
+    
     @include onDesktop {
       grid-column: 6 / 8;
     }
+  }
+  
+  &__link {
+    color: #0f0e08;
   }
 }
