page was created

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "mixin.scss";
+@import "utils/grid.scss";
 
-body {
-  background: $c-gray;
-}
+@import "utils/grid.scss";
+@import "utils/header.scss";
+@import "utils/page.scss";
+@import "utils/container.scss";
+@import "utils/box.scss";
+@import "utils/photo.scss";
+@import "utils/point.scss";
+@import "utils/form-field.scss";
+@import "utils/contact-us.scss";
+@import "utils/social-symbols.scss";
+@import "utils/to-top.scss";
+@import "utils/footer.scss";
