page was created

--- a/src/styles/utils/box.scss
+++ b/src/styles/utils/box.scss
@@ -3,7 +3,7 @@
   width: 280px;
   height: 140px;
   background: #fff;
-  box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+  box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   margin: 20px;
   transform: translateY(-60%);
   padding-bottom: 20px;
@@ -29,7 +29,7 @@
     margin: 0;
     box-sizing: border-box;
 
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       font-size: 36px;
@@ -65,11 +65,11 @@
     }
   
     &__date {
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: bold;
       font-size: 16px;
       line-height: 150%;
-      color: #1A5A4C;
+      color: #1a5a4c;
 
       text-decoration: none;
 
