--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -10,7 +10,6 @@
     height: 655px;
   }
 
-
   &__nav {
 
     display: flex;
@@ -27,22 +26,21 @@
 
   }
 
-
   &__menu-opener {
-      display: block;
-      width: 18px;
-      height: 12px;
-      background-image: url(../images/menu.svg);
-      z-index: 1;
-      margin: 24px 90px 0 0;
+    display: block;
+    width: 18px;
+    height: 12px;
+    background-image: url(../images/menu.svg);
+    z-index: 1;
+    margin: 24px 90px 0 0;
 
-      @include onTablet {
-        margin-right: 400px;
-      }
+    @include onTablet {
+      margin-right: 400px;
+    }
 
-      @include onDesktop {
-        margin-right: 540px;
-      }
+    @include onDesktop {
+      margin-right: 540px;
+    }
   }
 
   &__background {
@@ -64,11 +62,11 @@
     }
 
     @include onDesktop {
-        width: 725px;
-        height: 655px;
-        position: absolute;
-        right: 0;
-      }
+      width: 725px;
+      height: 655px;
+      position: absolute;
+      right: 0;
+    }
 
   }
 
@@ -79,9 +77,8 @@
     line-height: 100%;
     text-align: center;
 
-    color: #000000;
+    color: #000;
     margin-top: 250px;
-
 
     @include onTablet {
 
@@ -119,9 +116,8 @@
       margin-top: 89px;
     }
 
-
     &-text {
-      border: 1px solid #1A5A4C;
+      border: 1px solid #1a5a4c;
       box-sizing: border-box;
       height: 50px;
       width: 230px;
@@ -149,7 +145,7 @@
       align-items: center;
       justify-content: center;
 
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
 
       &:hover {
         box-shadow: 1px 4px 16px rgba(19, 56, 2, 0.4);
@@ -157,7 +153,8 @@
 
       @include onTablet {
         width: 70px;
-        height: 70px;    
+        height: 70px;
+
       }
 
       &--right {
@@ -167,6 +164,5 @@
       }
     }
   }
-
 
 }
