--- a/src/styles/utils/page.scss
+++ b/src/styles/utils/page.scss
@@ -54,13 +54,13 @@ html {
       font-size: 28px;
       line-height: 100%;
       position: relative;
-      color: #0F0E08;
+      color: #0f0e08;
       display: flex;
       justify-content: start;
       align-items: center;
 
       &::after {
-        content: '';
+        content: "";
         display: block;
         background-image: url(../images/Rectangle.svg);
         width: 10px;
@@ -83,13 +83,12 @@ html {
       font-size: 16px;
       line-height: 150%;
 
-      color: #4E4E4E;
+      color: #4e4e4e;
 
       @include onTablet {
         margin: 15px 0 16px;
         font-size: 16px;
       }
-
 
     }
 
@@ -125,11 +124,11 @@ html {
       }
     
       &__date {
-        font-family: "IBM Plex Sans";
+        font-family: "IBM Plex Sans", sans-serif;
         font-weight: bold;
         font-size: 16px;
         line-height: 150%;
-        color: #1A5A4C;
+        color: #1a5a4c;
         cursor: pointer;
 
         text-decoration: none;
@@ -176,7 +175,7 @@ html {
       font-weight: bold;
       font-size: 36px;
       line-height: 100%;
-      color: #0F0E08;
+      color: #0f0e08;
       text-align: center;
     }
   }
@@ -250,7 +249,7 @@ html {
         align-items: center;
         justify-content: center;
   
-        background-color: #F14A27;
+        background-color: #f1aa27;
 
         &:hover {
           box-shadow: 1px 4px 16px rgba(173, 101, 19, 0.4);
@@ -295,7 +294,7 @@ html {
       font-weight: 400;
       font-size: 14px;
       line-height: 140%;
-      color: #0F0E08;
+      color: #0f0e08;
       width: 130px;
 
       @include onTablet {
@@ -311,7 +310,7 @@ html {
       font-weight: 400;
       font-size: 14px;
       line-height: 150%;
-      color: #0F0E08;
+      color: #0f0e08;
       
       @include onTablet {
         width: 100%;
@@ -357,7 +356,7 @@ html {
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
-      color: #0F0E08;
+      color: #0f0e08;
       text-decoration: none;
     }
 
