--- a/src/styles/utils/social-symbols.scss
+++ b/src/styles/utils/social-symbols.scss
@@ -22,7 +22,7 @@
     background-image: url(../images/Instagram.svg);
 
     &::after {
-      content: '';
+      content: "";
       width: 11px;
       height: 11px;
       display: block;
