page was created

--- a/src/styles/utils/page.scss
+++ b/src/styles/utils/page.scss
@@ -249,7 +249,7 @@ html {
         align-items: center;
         justify-content: center;
   
-        background-color: #f1aa27;
+        background-color: #f14a27;;
 
         &:hover {
           box-shadow: 1px 4px 16px rgba(173, 101, 19, 0.4);
