burger-menu was added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "mixin.scss";
+@import "utils/menu.scss";
 @import "utils/grid.scss";
 @import "utils/header.scss";
 @import "utils/page.scss";
