--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -34,8 +34,10 @@
     z-index: 1;
     margin: 24px 90px 0 0;
 
+
     @include onTablet {
       margin-right: 400px;
+      z-index: 0;
     }
 
     @include onDesktop {
