--- a/src/styles/utils/page.scss
+++ b/src/styles/utils/page.scss
@@ -9,6 +9,19 @@ html {
     margin: 0;
   }
 
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
+
   &__section-1 {
 
     padding: 70px 0 0;
@@ -249,7 +262,7 @@ html {
         align-items: center;
         justify-content: center;
   
-        background-color: #f14a27;;
+        background-color: #f14a27;
 
         &:hover {
           box-shadow: 1px 4px 16px rgba(173, 101, 19, 0.4);
