--- a/src/styles/utils/box.scss
+++ b/src/styles/utils/box.scss
@@ -1,11 +1,11 @@
 .box {
   box-sizing: border-box;
+  margin: 0 auto;
   width: 280px;
   height: 140px;
   background: #fff;
   box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-  margin: 20px;
-  transform: translateY(-60%);
+  transform: translateY(-50%);
   padding-bottom: 20px;
 
   @include onTablet {
