--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -34,7 +34,6 @@
     z-index: 1;
     margin: 24px 90px 0 0;
 
-
     @include onTablet {
       margin-right: 400px;
       z-index: 0;
@@ -47,7 +46,7 @@
 
   &__background {
     background-image: url(../images/background.svg);
-    width: 320px;
+    width: 100%;
     height: 300px;
     background-position: center;
     background-size: cover;
