--- a/src/styles/utils/menu.scss
+++ b/src/styles/utils/menu.scss
@@ -11,7 +11,6 @@
     height: 655px;
   }
 
-
   &__nav {
 
     display: flex;
@@ -32,7 +31,6 @@
 
     margin: 24px 0 0 100px;
 
-
     @include onTablet {
       margin: 24px 0 0 220px;
     }
@@ -45,7 +43,8 @@
   }
 
   &__list {
-    margin: 0 ; 
+    margin: 0;
+    
     padding: 0;
     list-style: none;
   }
@@ -71,7 +70,7 @@
     text-decoration: none;
     letter-spacing: 2px;
     
-    color: #0F0E08;
+    color: #0f0e08;
 
     &:hover {
       border-color: #0f0e08;
