15% is done new

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "./normalize";
 @import "./utils/mixin";
 @import "./blocks/grid.scss";
+@import "./utils/vars";
 
 .page {
   font-family: "Montserrat", sans-serif;
@@ -20,7 +21,7 @@
 
   @include onTablet {
     max-width: 768px;
-    padding: 15px 0;
+    padding: 127px 0;
     display: flex;
     flex-direction: column;
     // height: 700px;
@@ -30,11 +31,11 @@
 
   @include onDesktop {
     max-width: 1024px;
+    padding: 206px 0;
   }
 
   @include onBigDesktop {
     max-width: 1280px;
-    padding: 15px 55px 0;
   }
 }
 
@@ -47,18 +48,15 @@
   }
 
   &__nav {
-
-    @media (max-width: 320px) {
-      position: absolute;
-      top: 9px;
-      display: flex;
-      align-items: center;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 9px;
 
     @include onTablet {
       display: flex;
       align-items: center;
-      justify-content: space-between;
       margin-bottom: 250px;
       // // margin-bottom: 40px;
     }
