--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -32,6 +32,27 @@
 
     &--contacts {
       line-height: 21px;
+
+      &-link {
+        display: block;
+        text-decoration: none;
+        color: $black;
+      }
+    }
+
+    &--title {
+      margin-bottom: 20px;
+    }
+
+    &--schedule {
+      list-style: none;
+      padding: 0;
+
+      &-item {
+        &:last-child {
+          margin-top: 20px;
+        }
+      }
     }
 
     &--copyright {
