--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -53,26 +53,28 @@
 
   &__field {
     height: 100%;
-    width: 230px;
+    width: 210px;
     background-color: #fff;
     padding: 0;
     border: none;
 
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: $black;
+    padding-left: 20px;
+
     @include onTablet {
-      width: 374px;
+      width: 354px;
     }
 
     @include onDesktop {
-      width: 470px;
+      width: 450px;
     }
 
     &::placeholder {
-      font-family: "Montserrat", sans-serif;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 14px;
       color: #687480;
-      padding-left: 24px;
     }
   }
 
