museum was added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,28 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/extends";
+@import "../styles/utils/fonts";
+@import "../styles/utils/mixins";
+@import "../styles/utils/utils";
+@import "../styles/utils/vars";
+@import "../styles/utils/resets.scss";
 
-body {
-  background: $c-gray;
-}
+@import "../styles/blocks/page.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/logo.scss";
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/burger.scss";
+@import "../styles/blocks/grid.scss";
+@import "../styles/blocks/container.scss";
+@import "../styles/blocks/intro.scss";
+@import "../styles/blocks/tiquets.scss";
+@import "../styles/blocks/actual.scss";
+@import "../styles/blocks/nav.scss";
+@import "../styles/blocks/top-side.scss";
+@import "../styles/blocks/classicism.scss";
+@import "../styles/blocks/article-info.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/subscription.scss";
+@import "../styles/blocks/footer.scss";
+@import "../styles/blocks/schedule.scss";
+@import "../styles/blocks/contacts.scss";
+@import "../styles/blocks/schedules-and-contacts.scss";
+@import "../styles/blocks/arrow-to-top.scss";
