--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$logo-width: 55px;
+$menu-opener-width: 18px;
+$squre-size: 10px;
+$almostBlack: #0f0e08;
+$grey: #687480;
+$darkGreen: #1a5a4c;
+$orange: #f14a27;
