--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,46 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin hover($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+  &:hover {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin mobile {
+  @media screen and (max-width: 739px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (min-width: 740px) and (max-width: 1099px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (min-width: 1100px) and (max-width: 1599px) {
+    @content;
+  }
+}
+
+@mixin design {
+  @media screen and (min-width: 1600px) and (max-width: 1919px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: 1920px) and (max-width: 2559px) {
+    @content;
+  }
+}
+
+@mixin large {
+  @media screen and (min-width: 2560px) {
+    @content;
+  }
+}
