--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/grid.scss";
+@import "./blocks/button.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/actual.scss";
 
 body {
-  background: $c-gray;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
