little changes added

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -60,6 +60,10 @@
 
   &__img-box {
 
+    &:nth-child(n + 2) {
+      display: none;
+    }
+
     &:nth-child(n + 3) {
 
       @include onDesktop {
@@ -84,10 +88,6 @@
         grid-column: 9 / -1;
       }
     }
-  }
-
-  &__img-box:nth-child(n + 2) {
-    display: none;
   }
 
   &__img-box:first-child {
