--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -14,6 +14,8 @@ a {
   text-decoration: none;
 }
 
-// html {
-//   // font-family: 'IBM Plex Sans', sans-serif;
-// }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
