--- a/src/styles/utils/_mixin.scss
+++ b/src/styles/utils/_mixin.scss
@@ -10,17 +10,17 @@
   }
 }
 
-@mixin onBigDesktop {
-  @media (min-width: 1280) {
+@mixin onMonoblock {
+  @media (min-width: 1280px) {
     @content;
   }
 }
 
-@mixin onLargeDesktop {
-  @media (min-width: 1600px) {
-    @content;
-  }
-}
+// @mixin onLargeDesktop {
+//   @media (min-width: 1600px) {
+//     @content;
+//   }
+// }
 
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
