--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -3,17 +3,35 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
+  &--not-desktop {
+    display: block;
+
+    @include onDesktop {
+      display: grid;
+    }
+  }
+
   @include onTablet {
     grid-template-columns: repeat(6, 1fr);
+    column-gap: 20px;
+    grid-auto-flow: column;
   }
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
+    row-gap: 30px;
   }
 
- 
   &__item {
+    @for $start from 1 through 2 {
+      @for $end from $start through 2 {
+        &--#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+      }
+    }
+
     @include onTablet {
       @for $start from 1 through 6 {
         @for $end from $start through 6 {
@@ -27,7 +45,7 @@
     @include onDesktop {
       @for $start from 1 through 12 {
         @for $end from $start through 12 {
-          &--#{$start}-#{$end} {
+          &--desktop-#{$start}-#{$end} {
             grid-column: #{$start} / #{$end + 1};
           }
         }
