--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -52,6 +52,8 @@
 
   &__img {
 
+    transition: $transition;
+
     @include tablet {
       grid-column: 1 / 7;
       width: 100%;
@@ -64,6 +66,10 @@
       width: 100%;
       height: 100%;
       margin-bottom: 20px;
+    }
+
+    &:hover {
+      transform: scale(105%);
     }
 
   }
@@ -108,13 +114,17 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
-    color: #687480;
+    color: #1a5a4c;
     width: fit-content;
     display: inline-block;
 
     @include mobile {
       font-size: 16px;
     }
+  }
+
+  &__link {
+    text-decoration: none;
   }
 
   &__title {
@@ -126,6 +136,7 @@
     color: #0f0e08;
     margin: 0;
     margin-bottom: 15px;
+    transition: $transition;
 
     @include tablet {
       margin-bottom: 15px;
@@ -134,6 +145,11 @@
     @include mobile {
       margin-bottom: 10px;
       font-size: 28px;
+    }
+
+    &:hover {
+      color: #1a5a4c;
+      transform: scale(105%);
     }
   }
 
