--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -4,7 +4,7 @@
   text-decoration: none;
   text-align: center;
   position: relative;
-  transition: all 0.35s;
+  transition: $transition;
 
   &::after {
     position: absolute;
@@ -14,7 +14,7 @@
     width: 0;
     height: 100%;
     background: #1a5a4c;
-    transition: all 0.35s;
+    transition: $transition;
   }
 
   &:hover {
