--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -60,6 +60,7 @@
       line-height: 100%;
       color: #687480;
       margin-left: 20px;
+      @include hover(color, #f14a27);
 
       &-line {
         display: block;
@@ -68,6 +69,14 @@
         background-color: $green-col;
         transform: rotate(90deg) translate(-43px, 60px);
         position: absolute;
+      }
+
+      &:hover > .header__add-info-line {
+        background-color: #f14a27;
+      }
+
+      &:hover {
+        color: #f14a27;
       }
     }
   }
