--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -130,6 +130,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    font-size: 12px;
+    font-weight: 300;
     text-align: center;
 
     margin-top: 80px;
